@@ -7,6 +7,7 @@ ncmpc 0.20 - not yet released
 * screen_lyrics: You can now edit lyrics by pressing 'e'
 * configurable timeout for MPD connections
 * screen_keydef: show command descriptions
+* show the paths of the configuration files in --version output
 
 
 ncmpc 0.19 - (07/23/2011)
